--- a/activity/templates/activity/base.html
+++ b/activity/templates/activity/base.html
@@ -4,6 +4,8 @@
 <head>
     <title>TaskLens</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'activity/style.css' %}">
 </head>
 <body>
 <div class="container mt-4">
